Change in about us

--- a/home.html
+++ b/home.html
@@ -10,12 +10,12 @@
 <link href="assets/plugins/iview/css/skin/style.css" rel="stylesheet">
 
 <!-- SWITCHER -->
-<link href="assets/plugins/switcher/css/switcher.css" rel="stylesheet" id="switcher-css" media="all">
+<!-- <link href="assets/plugins/switcher/css/switcher.css" rel="stylesheet" id="switcher-css" media="all">
 <link href="assets/plugins/switcher/css/color1.css" rel="alternate stylesheet" title="color1" media="all">
 <link href="assets/plugins/switcher/css/color2.css" rel="alternate stylesheet" title="color2" media="all">
 <link href="assets/plugins/switcher/css/color3.css" rel="alternate stylesheet" title="color3" media="all">
 <link href="assets/plugins/switcher/css/color4.css" rel="alternate stylesheet" title="color4" media="all">
-<link href="assets/plugins/switcher/css/color5.css" rel="alternate stylesheet" title="color5" media="all">
+<link href="assets/plugins/switcher/css/color5.css" rel="alternate stylesheet" title="color5" media="all"> -->
 <script src="assets/plugins/jquery/jquery-1.11.1.min.js"></script>
 </head>
 
@@ -164,7 +164,7 @@
                   <li><a href="car-details.html">Credit Application</a></li>
                   <li><a href="news.html">Get Pre-Qualified in Seconds</a></li>
                   <li><a href="news-grid.html">Request a Free Quote</a></li>
-                  <li><a href="aboutus.html">About Us</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
                   <li><a href="news-details.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -1127,7 +1127,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-xs-12">
-                  <h2 class="footer-title">auto <span class="footer-title__inner">ZONE</span></h2>
+                  <h2 class="footer-title"> NextLane <span class="footer-title__inner">Auto</span></h2>
                   <div class="decor-1 decor-1_mod-b"></div>
                 </div>
                 <!-- end col --> 
