--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12"> 
-              <a href="index.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
+              <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
               <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span> <a class="header-contacts__item" href="mailto:autoz@zone.com"><i class="icon fa fa-envelope"></i>autoz (at) zone.com</a> </div>
               <ul class="social-links list-inline">
                 <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
@@ -161,8 +161,8 @@
                 <ul class="button-list">
                   <li><a href="home.html">Vehicles</a></li>
                   <li><a href="vehicle-listings.html">Trade or Sell Your Vehicle</a></li>
-                  <li><a href="car-details.html">Credit Application</a></li>
-                  <li><a href="news.html">Get Pre-Qualified in Seconds</a></li>
+                  <li><a href="credit_application.html">Credit Application</a></li>
+                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
                   <li><a href="news-grid.html">Request a Free Quote</a></li>
                   <li><a href="about-us.html">About Us</a></li>
                   <li><a href="news-details.html">Contact Us</a></li>
@@ -1174,7 +1174,7 @@
       </div>
       <!-- end wrap-section-border -->
       <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-      <div class="copyright">Copyrights 2015 - 2016 <a class="copyright__link" href="javascript:void(0);">AutoZONE</a> : : All rights reserved</div>
+      <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">Next Lane Auto</a> : : All rights reserved</div>
     </footer>
   </div>
   <!-- end #wrapper --> 
