--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
                      <div class="row">
                         <div class="col-xs-12">
                            <a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
-                           <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span> <a class="header-contacts__item" href="mailto:autoz@zone.com"><i class="icon fa fa-envelope"></i>autoz (at) zone.com</a> </div>
+                           <div class="header-contacts"> <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span> <a class="header-contacts__item" href="mailto:contact@nextlaneauto.com"><i class="icon fa fa-envelope"></i>contact@nextlaneauto.com</a> </div>
                            <ul class="social-links list-inline">
                               <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
                               <li><a class="icon fa fa-twitter" href="javascript:void(0);"></a></li>
@@ -105,36 +105,44 @@
                <div id="sliderpro1" class="slider-pro main-slider">
                   <div class="sp-slides">
                      <div class="sp-slide">
+                        <video class="sp-image" autoplay muted loop>
+                           <source src="assets/mov/Nextlane.mov" type="video/mp4" />
+                           Your browser does not support the video tag.
+                        </video>
                         <img class="sp-image" src="assets/media/main-slider/1.jpg" data-src="assets/media/main-slider/1.jpg" data-retina="assets/media/main-slider/1.jpg" alt="img" />
                         <div class="item-wrap sp-layer sp-padding" data-horizontal="100" data-vertical="300" data-show-transition="left" data-hide-transition="up" data-show-delay="400" data-hide-delay="200">
                            <div class="main-slider__inner text-left">
                               <div class="custom-caption">
-                                 <a class="main-slider__btn btn-effect" href="javascript:void(0);"><span class="main-slider__btn_inner">the all new</span></a>
-                                 <div class="main-slider__title">2016 Acura ILX</div>
+                                 <a class="main-slider__btn btn-effect" href="trade_or_sell_your_vehicle.html"><span class="main-slider__btn_inner">the all new</span></a>
+                                 <div class="main-slider__title">2025 ACURA INTEGRA</div>
                                  <div class="main-slider__subtitle">High Performance & Outstanding Technology Combined</div>
                                  <div class="decor-1"></div>
                                  <div class="main-slider__text">Starts from</div>
                                  <div>
-                                    <span class="main-slider__price">$35,290</span>
-                                    <a class="main-slider__link" href="javascript:void(0);"><i class="icon fa fa-caret-right"></i></a>
+                                    <span class="main-slider__price">$</span>
+                                    <a class="main-slider__link" href="request_a_free_quote.html"><i class="icon fa fa-caret-right"></i></a>
                                  </div>
                               </div>
                            </div>
                         </div>
                      </div>
                      <div class="sp-slide">
+                        <video class="sp-image" autoplay muted loop>
+                           <source src="assets/mov/Nextlane.mov" type="video/mp4" />
+                           Your browser does not support the video tag.
+                        </video>
                         <img class="sp-image" src="assets/media/main-slider/2.jpg" data-src="assets/media/main-slider/2.jpg" data-retina="assets/media/main-slider/2.jpg" alt="img" />
                         <div class="item-wrap sp-layer sp-padding" data-horizontal="100" data-vertical="300" data-show-transition="left" data-hide-transition="up" data-show-delay="400" data-hide-delay="200">
                            <div class="main-slider__inner text-left">
                               <div class="custom-caption">
-                                 <a class="main-slider__btn btn-effect" href="javascript:void(0);"><span class="main-slider__btn_inner">the all new</span></a>
-                                 <div class="main-slider__title">2016 Acura ILX</div>
+                                 <a class="main-slider__btn btn-effect" href="trade_or_sell_your_vehicle.html"><span class="main-slider__btn_inner">the all new</span></a>
+                                 <div class="main-slider__title">2025 ACURA RDX</div>
                                  <div class="main-slider__subtitle">High Performance & Outstanding Technology Combined</div>
                                  <div class="decor-1"></div>
                                  <div class="main-slider__text">Starts from</div>
                                  <div>
-                                    <span class="main-slider__price">$37,390</span>
-                                    <a class="main-slider__link" href="javascript:void(0);"><i class="icon fa fa-caret-right"></i></a>
+                                    <span class="main-slider__price">$</span>
+                                    <a class="main-slider__link" href="request_a_free_quote.html"><i class="icon fa fa-caret-right"></i></a>
                                  </div>
                               </div>
                            </div>
