--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
                      <div class="col-xs-12">
                         <div class="header-contacts">
                            <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span>
-                           <a class="header-contacts__item" href="mailto:autoz@zone.com"><i class="icon fa fa-envelope"></i>autoz (at) zone.com</a>
+                           <a class="header-contacts__item" href="mailto:contact@nextlaneauto.com"><i class="icon fa fa-envelope"></i>contact@nextlaneauto.com</a>
                         </div>
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
