--- a/contact_us.html
+++ b/contact_us.html
@@ -78,7 +78,7 @@
                      <div class="col-xs-12">
                         <div class="header-contacts">
                            <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span>
-                           <a class="header-contacts__item" href="mailto:autoz@zone.com"><i class="icon fa fa-envelope"></i>autoz (at) zone.com</a>
+                           <a class="header-contacts__item" href="mailto:contact@nextlaneauto.com"><i class="icon fa fa-envelope"></i>contact@nextlaneauto.com</a>
                         </div>
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
@@ -174,7 +174,7 @@
                <!-- end row -->
                <div class="row">
                   <div class="col-sm-10 col-sm-offset-1">
-                     <form class="form-contact" action="post">
+                     <form class="form-contact" action="php/process_form.php" method="POST">
                         <div class="row">
                            <div class="col-sm-6">
                               <input class="form-control" type="text" placeholder="First Name" required>
@@ -250,7 +250,7 @@
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">email:</span>
-                                 <span class="footer__text">info@autozone.com</span>
+                                 <span class="footer__text">contact@nextlaneauto.com</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
