--- a/get_pre_qualified.html
+++ b/get_pre_qualified.html
@@ -132,7 +132,7 @@
                      <div class="col-xs-12">
                         <div class="header-contacts">
                            <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span>
-                           <a class="header-contacts__item" href="mailto:autoz@zone.com"><i class="icon fa fa-envelope"></i>autoz (at) zone.com</a>
+                           <a class="header-contacts__item" href="mailto:contact@nextlaneauto.com"><i class="icon fa fa-envelope"></i>contact@nextlaneauto.com</a>
                         </div>
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
@@ -203,7 +203,7 @@
          <!-- starts new block -->
          <div class="form-container">
             <h2>Will not impact your credit score!</h2>
-            <form action="send_email.php" method="POST">
+            <form action="php/send_get_pre_qualified_email.php" method="POST">
                <h3 class="fa fa-user fa-2x">&nbsp;Personal Info</h3>
                <div class="form-group">
                   <label for="firstName">First Name <span style="color: #e00e0e;">*</span></label>
@@ -431,7 +431,7 @@
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">email:</span>
-                                 <span class="footer__text">info@autozone.com</span>
+                                 <span class="footer__text">contact@nextlaneauto.com</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
