--- a/trade_or_sell_your_vehicle.html
+++ b/trade_or_sell_your_vehicle.html
@@ -198,7 +198,7 @@
                      <div class="col-xs-12">
                         <div class="header-contacts">
                            <span class="header-contacts__item"><i class="icon fa fa-phone"></i>+ 987 654 3210</span>
-                           <a class="header-contacts__item" href="mailto:autoz@zone.com"><i class="icon fa fa-envelope"></i>autoz (at) zone.com</a>
+                           <a class="header-contacts__item" href="mailto:contact@nextlaneauto.com"><i class="icon fa fa-envelope"></i>contact@nextlaneauto.com</a>
                         </div>
                         <ul class="social-links list-inline">
                            <li><a class="icon fa fa-facebook" href="javascript:void(0);"></a></li>
@@ -444,63 +444,63 @@
          
          // Example car data
          const cars = [
-         { make: "ACURA", model: "INTEGRA", year: "2025", price: "$26,500", image: "./assets/extracted_images/integra.png" },
-         { make: "ACURA", model: "TLX", year: "2025", price: "$47,200", image: "./assets/extracted_images/tlx.png" },
-         { make: "ACURA", model: "RDX", year: "2025", price: "$38,400", image: "./assets/extracted_images/rdx.png" },
-         { make: "ACURA", model: "MDX", year: "2025", price: "$37,500", image: "./assets/extracted_images/mdx.png" },
-         { make: "HONDA", model: "CIVIC", year: "2025", price: "$20,000", image: "./assets/extracted_images/civic.png" },
-         { make: "HONDA", model: "ACCORD", year: "2025", price: "$20,000", image: "./assets/extracted_images/accord.png" },
-         { make: "HONDA", model: "HR-V", year: "2025", price: "$24,000", image: "./assets/extracted_images/hr-v.png" },
-         { make: "HONDA", model: "CR-V", year: "2025", price: "$20,000", image: "./assets/extracted_images/cr-v.png" },
-         { make: "HONDA", model: "PASSPORT", year: "2025", price: "$24,000", image: "./assets/extracted_images/passport.png" },
-         { make: "HONDA", model: "PILOT", year: "2025", price: "$20,000", image: "./assets/extracted_images/pilot.png" },
-         { make: "HONDA", model: "ODYSSEY", year: "2025", price: "$24,000", image: "./assets/extracted_images/odyssey.png" },
-         { make: "HYUNDAI", model: "TUCSON", year: "2025", price: "$60,000", image: "./assets/extracted_images/tucson.png" },
-         { make: "HYUNDAI", model: "SANTA FE", year: "2025", price: "$60,000", image: "./assets/extracted_images/santafe.png" },
-         { make: "HYUNDAI", model: "PALISADE", year: "2025", price: "$60,000", image: "./assets/extracted_images/palisade.png" },
-         { make: "HYUNDAI", model: "ELANTRA", year: "2025", price: "$60,000", image: "./assets/extracted_images/elantra.png" },
-         { make: "HYUNDAI", model: "SONATA", year: "2025", price: "$60,000", image: "./assets/extracted_images/sonata.png" },
-         { make: "KIA", model: "SPORTAGE", year: "2025", price: "$60,000", image: "./assets/extracted_images/sportage.png" },
-         { make: "KIA", model: "TELLURIDE", year: "2025", price: "$60,000", image: "./assets/extracted_images/telluride.png" },
-         { make: "KIA", model: "K4", year: "2025", price: "$60,000", image: "./assets/extracted_images/k4.png" },
-         { make: "KIA", model: "K5", year: "2025", price: "$60,000", image: "./assets/extracted_images/k5.png" },
-         { make: "TOYOTA", model: "COROLLA", year: "2025", price: "$60,000", image: "./assets/extracted_images/corolla.png" },
-         { make: "TOYOTA", model: "CAMRY", year: "2025", price: "$60,000", image: "./assets/extracted_images/camry.png" },
-         { make: "TOYOTA", model: "RAV 4", year: "2025", price: "$60,000", image: "./assets/extracted_images/rav4.png" },
-         { make: "TOYOTA", model: "SIENNA", year: "2025", price: "$60,000", image: "./assets/extracted_images/sienna.png" },
-         { make: "TOYOTA", model: "HIGHLANDER", year: "2025", price: "$60,000", image: "./assets/extracted_images/highlander.png" },
-         { make: "LEXUS", model: "NX", year: "2025", price: "$60,000", image: "./assets/extracted_images/nx.png" },
-         { make: "LEXUS", model: "RX", year: "2025", price: "$60,000", image: "./assets/extracted_images/rx.png" },
-         { make: "LEXUS", model: "GX", year: "2025", price: "$60,000", image: "./assets/extracted_images/gx.png" },
-         { make: "LEXUS", model: "IS", year: "2025", price: "$60,000", image: "./assets/extracted_images/is.png" },
-         { make: "LEXUS", model: "ES", year: "2025", price: "$60,000", image: "./assets/extracted_images/es.png" },
-         { make: "MERCEDES", model: "GLA", year: "2025", price: "$60,000", image: "./assets/extracted_images/gla.png" },
-         { make: "MERCEDES", model: "GLB", year: "2025", price: "$60,000", image: "./assets/extracted_images/glb.png" },
-         { make: "MERCEDES", model: "GLC", year: "2025", price: "$60,000", image: "./assets/extracted_images/glc.png" },
-         { make: "MERCEDES", model: "GLE", year: "2025", price: "$60,000", image: "./assets/extracted_images/gle.png" },
-         { make: "MERCEDES", model: "GLS", year: "2025", price: "$60,000", image: "./assets/extracted_images/gls.png" },
-         { make: "MERCEDES", model: "C CLASS", year: "2025", price: "$60,000", image: "./assets/extracted_images/cclass.png" },
-         { make: "MERCEDES", model: "E CLASS", year: "2025", price: "$60,000", image: "./assets/extracted_images/eclass.png" },
-         { make: "MERCEDES", model: "S CLASS", year: "2025", price: "$60,000", image: "./assets/extracted_images/sclass.png" },
-         { make: "NISSAN", model: "MURANO", year: "2025", price: "$60,000", image: "./assets/extracted_images/murano.png" },
-         { make: "NISSAN", model: "ROGUE", year: "2025", price: "$60,000", image: "./assets/extracted_images/rogue.png" },
-         { make: "NISSAN", model: "PATHFINDER", year: "2025", price: "$60,000", image: "./assets/extracted_images/pathfinder.png" },
-         { make: "NISSAN", model: "SENTRA", year: "2025", price: "$60,000", image: "./assets/extracted_images/sentra.png" },
-         { make: "NISSAN", model: "ALTIMA", year: "2025", price: "$60,000", image: "./assets/extracted_images/altima.png" },
-         { make: "INFINITI", model: "QX60", year: "2025", price: "$60,000", image: "./assets/extracted_images/qx60.png" },
-         { make: "INFINITI", model: "QX50", year: "2025", price: "$60,000", image: "./assets/extracted_images/qx50.png" },
-         { make: "INFINITI", model: "QX80", year: "2025", price: "$60,000", image: "./assets/extracted_images/qx80.png" },
-         { make: "INFINITI", model: "Q50", year: "2025", price: "$60,000", image: "./assets/extracted_images/q50.png" },
-         { make: "BMW", model: "X3", year: "2025", price: "$60,000", image: "./assets/extracted_images/x3.png" },
-         { make: "BMW", model: "X4", year: "2025", price: "$60,000", image: "./assets/extracted_images/x4.png" },
-         { make: "BMW", model: "X5", year: "2025", price: "$60,000", image: "./assets/extracted_images/x5.png" },
-         { make: "BMW", model: "X6", year: "2025", price: "$60,000", image: "./assets/extracted_images/x6.png" },
-         { make: "BMW", model: "X7", year: "2025", price: "$55,000", image: "./assets/extracted_images/x7.png" },
-         { make: "BMW", model: "2 SERIES", year: "2025", price: "$60,000", image: "./assets/extracted_images/2series.png" },
-         { make: "BMW", model: "3 SERIES", year: "2025", price: "$60,000", image: "./assets/extracted_images/3series.png" },
-         { make: "BMW", model: "4 SERIES", year: "2025", price: "$60,000", image: "./assets/extracted_images/4series.png" },
-         { make: "BMW", model: "5 SERIES", year: "2025", price: "$60,000", image: "./assets/extracted_images/5series.png" },
-         { make: "BMW", model: "7 SERIES", year: "2025", price: "$55,000", image: "./assets/extracted_images/7series.png" }
+         { make: "ACURA", model: "INTEGRA", year: "2025", price: "", image: "./assets/extracted_images/integra.png" },
+         { make: "ACURA", model: "TLX", year: "2025", price: "", image: "./assets/extracted_images/tlx.png" },
+         { make: "ACURA", model: "RDX", year: "2025", price: "", image: "./assets/extracted_images/rdx.png" },
+         { make: "ACURA", model: "MDX", year: "2025", price: "", image: "./assets/extracted_images/mdx.png" },
+         { make: "HONDA", model: "CIVIC", year: "2025", price: "", image: "./assets/extracted_images/civic.png" },
+         { make: "HONDA", model: "ACCORD", year: "2025", price: "", image: "./assets/extracted_images/accord.png" },
+         { make: "HONDA", model: "HR-V", year: "2025", price: "", image: "./assets/extracted_images/hr-v.png" },
+         { make: "HONDA", model: "CR-V", year: "2025", price: "", image: "./assets/extracted_images/cr-v.png" },
+         { make: "HONDA", model: "PASSPORT", year: "2025", price: "", image: "./assets/extracted_images/passport.png" },
+         { make: "HONDA", model: "PILOT", year: "2025", price: "", image: "./assets/extracted_images/pilot.png" },
+         { make: "HONDA", model: "ODYSSEY", year: "2025", price: "", image: "./assets/extracted_images/odyssey.png" },
+         { make: "HYUNDAI", model: "TUCSON", year: "2025", price: "", image: "./assets/extracted_images/tucson.png" },
+         { make: "HYUNDAI", model: "SANTA FE", year: "2025", price: "", image: "./assets/extracted_images/santafe.png" },
+         { make: "HYUNDAI", model: "PALISADE", year: "2025", price: "", image: "./assets/extracted_images/palisade.png" },
+         { make: "HYUNDAI", model: "ELANTRA", year: "2025", price: "", image: "./assets/extracted_images/elantra.png" },
+         { make: "HYUNDAI", model: "SONATA", year: "2025", price: "", image: "./assets/extracted_images/sonata.png" },
+         { make: "KIA", model: "SPORTAGE", year: "2025", price: "", image: "./assets/extracted_images/sportage.png" },
+         { make: "KIA", model: "TELLURIDE", year: "2025", price: "", image: "./assets/extracted_images/telluride.png" },
+         { make: "KIA", model: "K4", year: "2025", price: "", image: "./assets/extracted_images/k4.png" },
+         { make: "KIA", model: "K5", year: "2025", price: "", image: "./assets/extracted_images/k5.png" },
+         { make: "TOYOTA", model: "COROLLA", year: "2025", price: "", image: "./assets/extracted_images/corolla.png" },
+         { make: "TOYOTA", model: "CAMRY", year: "2025", price: "", image: "./assets/extracted_images/camry.png" },
+         { make: "TOYOTA", model: "RAV 4", year: "2025", price: "", image: "./assets/extracted_images/rav4.png" },
+         { make: "TOYOTA", model: "SIENNA", year: "2025", price: "", image: "./assets/extracted_images/sienna.png" },
+         { make: "TOYOTA", model: "HIGHLANDER", year: "2025", price: "", image: "./assets/extracted_images/highlander.png" },
+         { make: "LEXUS", model: "NX", year: "2025", price: "", image: "./assets/extracted_images/nx.png" },
+         { make: "LEXUS", model: "RX", year: "2025", price: "", image: "./assets/extracted_images/rx.png" },
+         { make: "LEXUS", model: "GX", year: "2025", price: "", image: "./assets/extracted_images/gx.png" },
+         { make: "LEXUS", model: "IS", year: "2025", price: "", image: "./assets/extracted_images/is.png" },
+         { make: "LEXUS", model: "ES", year: "2025", price: "", image: "./assets/extracted_images/es.png" },
+         { make: "MERCEDES", model: "GLA", year: "2025", price: "", image: "./assets/extracted_images/gla.png" },
+         { make: "MERCEDES", model: "GLB", year: "2025", price: "", image: "./assets/extracted_images/glb.png" },
+         { make: "MERCEDES", model: "GLC", year: "2025", price: "", image: "./assets/extracted_images/glc.png" },
+         { make: "MERCEDES", model: "GLE", year: "2025", price: "", image: "./assets/extracted_images/gle.png" },
+         { make: "MERCEDES", model: "GLS", year: "2025", price: "", image: "./assets/extracted_images/gls.png" },
+         { make: "MERCEDES", model: "C CLASS", year: "2025", price: "", image: "./assets/extracted_images/cclass.png" },
+         { make: "MERCEDES", model: "E CLASS", year: "2025", price: "", image: "./assets/extracted_images/eclass.png" },
+         { make: "MERCEDES", model: "S CLASS", year: "2025", price: "", image: "./assets/extracted_images/sclass.png" },
+         { make: "NISSAN", model: "MURANO", year: "2025", price: "", image: "./assets/extracted_images/murano.png" },
+         { make: "NISSAN", model: "ROGUE", year: "2025", price: "", image: "./assets/extracted_images/rogue.png" },
+         { make: "NISSAN", model: "PATHFINDER", year: "2025", price: "", image: "./assets/extracted_images/pathfinder.png" },
+         { make: "NISSAN", model: "SENTRA", year: "2025", price: "", image: "./assets/extracted_images/sentra.png" },
+         { make: "NISSAN", model: "ALTIMA", year: "2025", price: "", image: "./assets/extracted_images/altima.png" },
+         { make: "INFINITI", model: "QX60", year: "2025", price: "", image: "./assets/extracted_images/qx60.png" },
+         { make: "INFINITI", model: "QX50", year: "2025", price: "", image: "./assets/extracted_images/qx50.png" },
+         { make: "INFINITI", model: "QX80", year: "2025", price: "", image: "./assets/extracted_images/qx80.png" },
+         { make: "INFINITI", model: "Q50", year: "2025", price: "", image: "./assets/extracted_images/q50.png" },
+         { make: "BMW", model: "X3", year: "2025", price: "", image: "./assets/extracted_images/x3.png" },
+         { make: "BMW", model: "X4", year: "2025", price: "", image: "./assets/extracted_images/x4.png" },
+         { make: "BMW", model: "X5", year: "2025", price: "", image: "./assets/extracted_images/x5.png" },
+         { make: "BMW", model: "X6", year: "2025", price: "", image: "./assets/extracted_images/x6.png" },
+         { make: "BMW", model: "X7", year: "2025", price: "", image: "./assets/extracted_images/x7.png" },
+         { make: "BMW", model: "2 SERIES", year: "2025", price: "", image: "./assets/extracted_images/2series.png" },
+         { make: "BMW", model: "3 SERIES", year: "2025", price: "", image: "./assets/extracted_images/3series.png" },
+         { make: "BMW", model: "4 SERIES", year: "2025", price: "", image: "./assets/extracted_images/4series.png" },
+         { make: "BMW", model: "5 SERIES", year: "2025", price: "", image: "./assets/extracted_images/5series.png" },
+         { make: "BMW", model: "7 SERIES", year: "2025", price: "", image: "./assets/extracted_images/7series.png" }
          ];
          
          // Render car cards
