Last update 10 jan 2025

--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-      <title>Next Lane Auto</title>
+      <title>NextLane Auto</title>
       <style>	h1 {
          background-color: #e00e0e;
          color: #ffffff;
@@ -96,7 +96,7 @@
                            </div>
                            <div id="navbar-collapse-1" class="navbar-collapse collapse">
                               <ul class="nav navbar-nav">
-                                 <li><a href="home.html">Vehicles</a></li>
+                                 <li><a href="vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
                                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
@@ -515,7 +515,7 @@
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">email:</span>
-                                 <span class="footer__text">info@autozone.com</span>
+                                 <span class="footer__text">contact@nextlaneauto.com</span>
                               </div>
                               <div class="footer__item">
                                  <span class="footer__name">Hours:</span>
