--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-      <title>Next Lane Auto</title>
+      <title>NextLane Auto</title>
       <link href="favicon.png" type="image/x-icon" rel="shortcut icon">
       <link href="assets/css/master.css" rel="stylesheet">
       <link href="assets/plugins/iview/css/iview.css" rel="stylesheet">
@@ -157,7 +157,7 @@
                         <div class="row">
                            <div class="col-md-12 col-xs-12">
                               <ul class="button-list">
-                                 <li><a href="home.html">Vehicles</a></li>
+                                 <li><a href="vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a></li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
                                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
@@ -1232,7 +1232,7 @@
                               <div class="col-xs-12">
                                  <div class="footer__item"> <span class="footer__name">Phone:</span> <span class="footer__text">+1 (234) 567 8900</span> </div>
                                  <div class="footer__item"> <span class="footer__name">Fax:</span> <span class="footer__text">+1 (234) 567 8998</span> </div>
-                                 <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">info@autozone.com</span> </div>
+                                 <div class="footer__item"> <span class="footer__name">email:</span> <span class="footer__text">contact@nextlaneauto.com</span> </div>
                                  <div class="footer__item"> <span class="footer__name">Hours:</span> <span class="footer__text">Mon - Fri :: 9am - 6pm</span> </div>
                               </div>
                               <!-- end col --> 
@@ -1260,7 +1260,7 @@
                </div>
                <!-- end wrap-section-border -->
                <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-               <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">Next Lane Auto</a> : : All rights reserved</div>
+               <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">NextLane Auto</a> : : All rights reserved</div>
             </footer>
          </div>
          <!-- end #wrapper --> 
