--- a/contact_us.html
+++ b/contact_us.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-      <title>Next Lane Auto</title>
+      <title>NextLane Auto</title>
       <style>	h1 {
          background-color: #e00e0e;
          color: #ffffff;
@@ -107,7 +107,7 @@
                            </div>
                            <div id="navbar-collapse-1" class="navbar-collapse collapse">
                               <ul class="nav navbar-nav">
-                                 <li><a href="home.html">Vehicles</a></li>
+                                 <li><a href="vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
                                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
@@ -152,7 +152,7 @@
                <div class="row">
                   <div class="col-xs-12">
                      <h3>Contact us</h3>
-                     <p>Sed euismod ullamcorper tortsed ipsum dui</p>
+                    <!-- <p>Sed euismod ullamcorper tortsed ipsum dui</p> -->
                   </div>
                   <!-- end col --> 
                </div>
@@ -282,7 +282,7 @@
             </div>
             <!-- end wrap-section-border -->
             <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">Next Lane Auto</a> : : All rights reserved</div>
+            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : : All rights reserved</div>
          </footer>
       </div>
       <!-- end #wrapper -->
