--- a/failed.html
+++ b/failed.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-		<title>Next Lane Auto</title>
+		<title>NextLane Auto</title>
 		<link href="favicon.png" type="image/x-icon" rel="shortcut icon">
 		<link href="assets/css/master.css" rel="stylesheet">
 		<link href="assets/plugins/iview/css/iview.css" rel="stylesheet">
@@ -92,7 +92,7 @@
 								   </div>
 								   <div id="navbar-collapse-1" class="navbar-collapse collapse">
 									  <ul class="nav navbar-nav">
-										 <li><a href="home.html">Vehicles</a></li>
+										 <li><a href="vehicle.html">Vehicles</a></li>
 										 <li><a href="vehicle-listings.html">Trade or Sell Your Vehicle</a> </li>
 										 <li><a href="credit_application.html">Credit Application</a></li>
 										 <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
@@ -182,7 +182,7 @@
 											</div>
 											<div class="footer__item">
 												<span class="footer__name">email:</span>
-												<span class="footer__text">info@autozone.com</span>
+												<span class="footer__text">contact@nextlaneauto.com</span>
 											</div>
 											<div class="footer__item">
 												<span class="footer__name">Hours:</span>
@@ -207,7 +207,7 @@
 					</div><!-- end wrap-section-border -->
 					<div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
 
-					<div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">Next Lane Auto</a> : : All rights reserved</div>
+					<div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : : All rights reserved</div>
 				</footer>
 
 			</div><!-- end #wrapper -->
