--- a/vehicle.html
+++ b/vehicle.html
@@ -6,7 +6,7 @@
       <title>NextLane Auto</title>
       <style>
          body {
-         font-family: Nexa Heavy Italic, sans-serif;
+         font-family: Arial, sans-serif;
          margin: 20px;
          }
          h1 {
@@ -17,50 +17,53 @@
          border-radius: 4px;
          margin-bottom: 20px;
          }
-         .form-container h2 {
+         h3 {
+         color: #000000 !important;;
+         text-align: center;
+         padding: 10px;
+         border-radius: 4px;
+         margin-bottom: 20px;
+         }
+         p {
          color: #000000;
          text-align: center;
          padding: 10px;
          border-radius: 4px;
          margin-bottom: 20px;
          }
-         .form-container h3 {
-         background-color: #e00e0e;
-         color: #ffffff;
-         text-align: center;
-         padding: 5px;
-         border-radius: 3px;
-         margin-bottom: 8px;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         }
-         .form-container {
-         max-width: 600px;
+         form {
+         max-width: 500px;
          margin: 0 auto;
          padding: 20px;
          border: 1px solid #ccc;
          border-radius: 5px;
-         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+         background-color: #f9f9f9;
          }
-         .form-group {
+         form input, form textarea, form button {
+         width: 100%;
+         padding: 10px;
          margin-bottom: 15px;
+         border: 1px solid #ccc;
+         border-radius: 5px;
          }
-         .form-group label {
+         form textarea {
+         resize: vertical;
+         height: 100px;
+         }
+         form label {
          display: block;
          margin-bottom: 5px;
          font-weight: bold;
          }
-         .form-group input,
-         .form-group select {
-         width: 100%;
-         padding: 8px;
-         box-sizing: border-box;
-         border: 1px solid #ccc;
-         border-radius: 3px;
+         form .checkbox-label {
+         display: flex;
+         align-items: center;
          }
-         .form-footer {
-         margin-top: 20px;
+         form .checkbox-label input {
+         width: auto;
+         margin-right: 10px;
+         }
+         .captcha-container {
          text-align: center;
          }
          .form-footer button {
@@ -74,11 +77,6 @@
          }
          .form-footer button:hover {
          background-color: #000000;;
-         }
-         .consent-text {
-         font-size: 14px;
-         margin-top: 20px;
-         line-height: 1.5;
          }
       </style>
       <link href="favicon.png" type="image/x-icon" rel="shortcut icon">
@@ -188,11 +186,11 @@
          <div class="block-title">
             <div class="block-title__inner section-bg section-bg_second">
                <div class="bg-inner">
-                  <h1 class="ui-title-page">get pre-qualified</h1>
+                  <h1 class="ui-title-page">Vehicle</h1>
                   <div class="decor-1 center-block"></div>
                   <ol class="breadcrumb">
                      <li><a href="home.html">HOME</a></li>
-                     <li class="active">get pre-qualified in seconds</li>
+                     <li class="active">Vehicle</li>
                   </ol>
                </div>
                <!-- end bg-inner -->
@@ -201,202 +199,36 @@
          </div>
          <!-- end block-title -->
          <!-- starts new block -->
-         <div class="form-container">
-            <h2>Will not impact your credit score!</h2>
-            <form action="php/send_get_pre_qualified_email.php" method="POST">
-               <h3 class="fa fa-user fa-2x">&nbsp;Personal Info</h3>
-               <div class="form-group">
-                  <label for="firstName">First Name <span style="color: #e00e0e;">*</span></label>
-                  <input type="text" id="firstName" name="firstName" required>
-               </div>
-               <div class="form-group">
-                  <label for="middleName">Middle Name</label>
-                  <input type="text" id="middleName" name="middleName">
-               </div>
-               <div class="form-group">
-                  <label for="lastName">Last Name <span style="color: #e00e0e;">*</span></label>
-                  <input type="text" id="lastName" name="lastName" required>
-               </div>
-               <div class="form-group">
-                  <label for="dob">Date of Birth <span style="color: #e00e0e;">*</span></label>
-                  <input type="date" id="dob" name="dob" required>
-               </div>
-               <div class="form-group">
-                  <label for="driversLicense">Driver's License</label>
-                  <input type="text" id="driversLicense" name="driversLicense">
-               </div>
-               <h3 class="fa fa-info-circle fa-2x">&nbsp;Contact Info</h3>
-               <div class="form-group">
-                  <label for="phone">Phone <span style="color: #e00e0e;">*</span></label>
-                  <input type="tel" id="phone" name="phone" required>
-               </div>
-               <div class="form-group">
-                  <label for="email">Email Address <span style="color: #e00e0e;">*</span></label>
-                  <input type="email" id="email" name="email" required>
-               </div>
-               <div class="form-group">
-                  <label for="address">Address <span style="color: #e00e0e;">*</span></label>
-                  <input type="text" id="address" name="address" required>
-               </div>
-               <div class="form-group">
-                  <label for="apt">Apt/Unit</label>
-                  <input type="text" id="apt" name="apt">
-               </div>
-               <div class="form-group">
-                  <label for="city">City <span style="color: #e00e0e;">*</span></label>
-                  <input type="text" id="city" name="city" required>
-               </div>
-               <div class="form-group">
-                  <label for="state">State <span style="color: #e00e0e;">*</span></label>
-                  <select id="state" name="state" required>
-                     <option value="" disabled selected>Select State</option>
-                     <script>
-                        const states = [
-                        	"Alabama", "Alaska", "Arizona", "Arkansas", "California", "Colorado", "Connecticut",
-                        	"Delaware", "Florida", "Georgia", "Hawaii", "Idaho", "Illinois", "Indiana", "Iowa", 
-                        	"Kansas", "Kentucky", "Louisiana", "Maine", "Maryland", "Massachusetts", "Michigan",
-                        	"Minnesota", "Mississippi", "Missouri", "Montana", "Nebraska", "Nevada", "New Hampshire",
-                        	"New Jersey", "New Mexico", "New York", "North Carolina", "North Dakota", "Ohio", 
-                        	"Oklahoma", "Oregon", "Pennsylvania", "Rhode Island", "South Carolina", "South Dakota", 
-                        	"Tennessee", "Texas", "Utah", "Vermont", "Virginia", "Washington", "West Virginia", 
-                        	"Wisconsin", "Wyoming"
-                        ];
-                        states.forEach(state => {
-                        	document.write(`<option value="${state}">${state}</option>`);
-                        });
-                     </script>
-                  </select>
-               </div>
-               <div class="form-group">
-                  <label for="zipCode">Zip Code <span style="color: #e00e0e;">*</span></label>
-                  <input type="text" id="zipCode" name="zipCode" required>
-               </div>
-               <h3 class="fa fa-car fa-2x">&nbsp;Vehicle</h3>
-               <div class="form-group">
-                  <label for="type">Type <span style="color: #e00e0e;">*</span></label>
-                  <select id="type" name="type" required>
-                     <option value="" disabled selected>Select Type</option>
-                     <option value="New">New</option>
-                     <option value="Used">Used</option>
-                  </select>
-               </div>
-               <div class="form-group">
-                  <label for="year">Year <span style="color: #e00e0e;">*</span></label>
-                  <select id="year" name="year" required>
-                     <option value="" disabled selected>Select Year</option>
-                     <script>
-                        const currentYear = new Date().getFullYear();
-                        document.write(`<option value="${currentYear - 1}">${currentYear - 1}</option>`);
-                        document.write(`<option value="${currentYear}">${currentYear}</option>`);
-                     </script>
-                  </select>
-               </div>
-               <div class="form-group">
-                  <label for="make">Make <span style="color: #e00e0e;">*</span></label>
-                  <select id="make" name="make" required>
-                     <option value="" disabled selected>Select Make</option>
-                     <option value="ACURA">ACURA</option>
-                     <option value="HONDA">HONDA</option>
-                     <option value="HYUNDAI">HYUNDAI</option>
-                     <option value="KIA">KIA</option>
-                     <option value="TOYOTA">TOYOTA</option>
-                     <option value="LEXUS">LEXUS</option>
-                     <option value="MERCEDES">MERCEDES</option>
-                     <option value="NISSAN">NISSAN</option>
-                     <option value="INFINITI">INFINITI</option>
-                     <option value="BMW">BMW</option>
-                     <!-- Add more makes as needed -->
-                  </select>
-               </div>
-               <div class="form-group">
-                  <label for="model">Model <span style="color: #e00e0e;">*</span></label>
-                  <select id="model" name="model" required>
-                     <option value="" disabled selected>Select Model</option>
-                     <option value="Model1">Available Models</option>
-                     <option value="Model2">INTEGRA</option>
-                     <option value="Model2">TLX</option>
-                     <option value="Model2">RDX</option>
-                     <option value="Model2">MDX</option>
-                     <option value="Model2">CIVIC</option>
-                     <option value="Model2">ACCORD</option>
-                     <option value="Model2">HR-V</option>
-                     <option value="Model2">CR-V</option>
-                     <option value="Model2">PASSPORT</option>
-                     <option value="Model2">PILOT</option>
-                     <option value="Model2">ODYSSEY</option>
-                     <option value="Model2">TUCSON</option>
-                     <option value="Model2">SANTA FE</option>
-                     <option value="Model2">PALISADE</option>
-                     <option value="Model2">ELANTRA</option>
-                     <option value="Model2">SONATA</option>
-                     <option value="Model2">SPORTAGE</option>
-                     <option value="Model2">TELLURIDE</option>
-                     <option value="Model2">K4</option>
-                     <option value="Model2">K5</option>
-                     <option value="Model2">COROLLA</option>
-                     <option value="Model2">CAMRY</option>
-                     <option value="Model2">RAV 4</option>
-                     <option value="Model2">SIENNA</option>
-                     <option value="Model2">HIGHLANDER</option>
-                     <option value="Model2">NX</option>
-                     <option value="Model2">RX</option>
-                     <option value="Model2">GX</option>
-                     <option value="Model2">IS</option>
-                     <option value="Model2">ES</option>
-                     <option value="Model2">GLA</option>
-                     <option value="Model2">GLB</option>
-                     <option value="Model2">GLC</option>
-                     <option value="Model2">GLE</option>
-                     <option value="Model2">GLS</option>
-                     <option value="Model2">C CLASS</option>
-                     <option value="Model2">E CLASS</option>
-                     <option value="Model2">S CLASS</option>
-                     <option value="Model2">MURANO</option>
-                     <option value="Model2">ROGUE</option>
-                     <option value="Model2">PATHFINDER</option>
-                     <option value="Model2">SENTRA</option>
-                     <option value="Model2">ALTIMA</option>
-                     <option value="Model2">QX60</option>
-                     <option value="Model2">QX50</option>
-                     <option value="Model2">QX80</option>
-                     <option value="Model2">Q50</option>
-                     <option value="Model2">X3</option>
-                     <option value="Model2">X4</option>
-                     <option value="Model2">X5</option>
-                     <option value="Model2">X6</option>
-                     <option value="Model2">X7</option>
-                     <option value="Model2">2 SERIES</option>
-                     <option value="Model2">3 SERIES</option>
-                     <option value="Model2">4 SERIES</option>
-                     <option value="Model2">5 SERIES</option>
-                     <option value="Model2">7 SERIES</option>
-                     <!-- Add more models dynamically or as needed -->
-                  </select>
-               </div>
-               <div class="form-group">
-                  <label for="trim">Trim <span style="color: #e00e0e;">*</span></label>
-                  <select id="trim" name="trim" required>
-                     <option value="" disabled selected>Select Trim</option>
-                     <option value="Trim1">Available Trims</option>
-                     <!-- <option value="Trim2">Trim 2</option> -->
-                     <!-- Add more trims dynamically or as needed -->
-                  </select>
-               </div>
-               <div class="consent-text">
-                  You understand that by clicking on the I AGREE button immediately following this notice, you are providing 'written instructions' to NextLane Auto under the Fair Credit Reporting Act authorizing NextLane Auto to obtain your personal consumer report from one or more credit reporting agencies. You authorize NextLane Auto to obtain such information solely to conduct a prequalification for credit.
-                  <br><br>
-                  <div id="" class="form-section">
-                     <label>
-                     <input type="checkbox" name="agree" required>
-                     I have read the Privacy Policy, agree with the consent statement above, and authorize you to contact me via phone, text, and/or email.
-                     </label>
-                  </div>
-               </div>
-               <div class="form-footer">
-                  <button type="submit">I AGREE</button>
-               </div>
-            </form>
-         </div>
+         <h3><span style="color: #e00e0e;">CLAIM</span> THIS OFFER!</h3>
+         <p>FILL OUT THE FORM BELOW AND ONE OF OUR TEAM MEMBERS WILL CONTACT YOU SHORTLY!</p>
+         <form action="process_form.php" method="POST">
+            <label for="first_name">First Name <span style="color: #e00e0e;">*</span></label>
+            <input type="text" id="first_name" name="first_name" placeholder="First Name" required>
+            <label for="last_name">Last Name <span style="color: #e00e0e;">*</span></label>
+            <input type="text" id="last_name" name="last_name" placeholder="Last Name" required>
+            <label for="phone">Phone<span style="color: #e00e0e;">*</span></label>
+            <input type="tel" id="phone" name="phone" placeholder="Phone" required>
+            <label for="email">Email <span style="color: #e00e0e;">*</span></label>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <label for="vehicle">Vehicle Make/Model/Year <span style="color: #e00e0e;">*</span></label>
+            <input type="text" id="vehicle" name="vehicle" placeholder="Vehicle Make/Model/Year" required>
+            <label for="comments">Additional Comments</label>
+            <textarea id="comments" name="comments" placeholder="Additional Comments"></textarea>
+            <label for="lease_or_finance">Lease or Finance? <span style="color: #e00e0e;">*</span></label>
+            <input type="text" id="lease_or_finance" name="lease_or_finance" placeholder="Lease or Finance?" required>
+            <div class="checkbox-label">
+               <input type="checkbox" id="agree" name="agree" required>
+               <label for="agree">I agree to receiving future communications from NextLane Auto, terms of use, & privacy policy. <a href="#" target="_blank">View Privacy Policy</a></label>
+            </div>
+            <div class="captcha-container">
+               <!-- Include your CAPTCHA widget here -->
+               <div class="g-recaptcha" data-sitekey="6LeaK7IqAAAAAN4Crew5-wVvmOlZw_mzsQ4XJbw7"></div>
+            </div>
+            <div class="form-footer">
+               <button type="submit">SUBMIT</button>
+            </div>
+         </form>
+         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
          <!-- end new block -->
          <footer class="footer">
             <div class="wrap-section-border">
