Last changes 2 from 10 jan 2025

--- a/about-us.html
+++ b/about-us.html
@@ -96,7 +96,7 @@
                            </div>
                            <div id="navbar-collapse-1" class="navbar-collapse collapse">
                               <ul class="nav navbar-nav">
-                                 <li><a href="vehicle.html">Vehicles</a></li>
+                                 <li><a href="new_vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
                                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
@@ -547,7 +547,7 @@
             </div>
             <!-- end wrap-section-border -->
             <div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
-            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">Next Lane Auto</a> : : All rights reserved</div>
+            <div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="javascript:void(0);">NextLane Auto</a> : : All rights reserved</div>
          </footer>
       </div>
       <!-- end #wrapper -->
