--- a/failed.html
+++ b/failed.html
@@ -4,6 +4,34 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
 		<title>NextLane Auto</title>
+		<style>
+			body {
+			font-family: Arial, sans-serif;
+			margin: 20px;
+			}
+			h1 {
+			background-color: #e00e0e;
+			color: #ffffff;
+			text-align: center;
+			padding: 10px;
+			border-radius: 4px;
+			margin-bottom: 20px;
+			}
+			h3 {
+			color: #000000 !important;;
+			text-align: center;
+			padding: 10px;
+			border-radius: 4px;
+			margin-bottom: 20px;
+			}
+			p {
+			color: #000000;
+			text-align: center;
+			padding: 10px;
+			border-radius: 4px;
+			margin-bottom: 20px;
+			}
+	   </style>
 		<link href="favicon.png" type="image/x-icon" rel="shortcut icon">
 		<link href="assets/css/master.css" rel="stylesheet">
 		<link href="assets/plugins/iview/css/iview.css" rel="stylesheet">
@@ -84,7 +112,7 @@
 					   <div class="container">
 						  <div class="row">
 							 <div class="col-md-12 col-xs-12">
-								<a href="index.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
+								<a href="home.html" class="logo"> <img class="logo__img img-responsive" src="assets/nla.png" height="50" width="111" alt="Logo"> </a>
 								<div class="navbar yamm">
 								   <div class="navbar-header hidden-md hidden-lg hidden-sm">
 									  <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -92,19 +120,19 @@
 								   </div>
 								   <div id="navbar-collapse-1" class="navbar-collapse collapse">
 									  <ul class="nav navbar-nav">
-										 <li><a href="vehicle.html">Vehicles</a></li>
-										 <li><a href="vehicle-listings.html">Trade or Sell Your Vehicle</a> </li>
+										 <li><a href="new_vehicle.html">Vehicles</a></li>
+										 <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
 										 <li><a href="credit_application.html">Credit Application</a></li>
 										 <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
 										 <li class="dropdown" >
-											<a href="news.html">Request a Free Quote</a>
+											<a href="request_a_free_quote.html">Request a Free Quote</a>
 											<!--  <ul role="menu" class="dropdown-menu">
 											   <li> <a href="news-grid.html">DROPDOWN</a> </li>
 											   <li> <a href="news-details.html">DROPDOWN</a> </li>
 											   </ul> -->
 										 </li>
 										 <li><a href="about-us.html">About Us</a></li>
-										 <li><a href="news-details.html">Contact Us</a></li>
+										 <li><a href="contact_us.html">Contact Us</a></li>
 									  </ul>
 								   </div>
 								</div>
