--- a/home.html
+++ b/home.html
@@ -157,7 +157,7 @@
                         <div class="row">
                            <div class="col-md-12 col-xs-12">
                               <ul class="button-list">
-                                 <li><a href="vehicle.html">Vehicles</a></li>
+                                 <li><a href="new_vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a></li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
                                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
