--- a/credit_application.html
+++ b/credit_application.html
@@ -190,7 +190,7 @@
                            </div>
                            <div id="navbar-collapse-1" class="navbar-collapse collapse">
                               <ul class="nav navbar-nav">
-                                 <li><a href="vehicle.html">Vehicles</a></li>
+                                 <li><a href="new_vehicle.html">Vehicles</a></li>
                                  <li><a href="trade_or_sell_your_vehicle.html">Trade or Sell Your Vehicle</a> </li>
                                  <li><a href="credit_application.html">Credit Application</a></li>
                                  <li><a href="get_pre_qualified.html">Get Pre-Qualified in Seconds</a></li>
