--- a/success.html
+++ b/success.html
@@ -3,7 +3,35 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-		<title>Next Lane Auto</title>
+		<title>NextLane Auto</title>
+		<style>
+			body {
+			font-family: Arial, sans-serif;
+			margin: 20px;
+			}
+			h1 {
+			background-color: #e00e0e;
+			color: #ffffff;
+			text-align: center;
+			padding: 10px;
+			border-radius: 4px;
+			margin-bottom: 20px;
+			}
+			h3 {
+			color: #000000 !important;;
+			text-align: center;
+			padding: 10px;
+			border-radius: 4px;
+			margin-bottom: 20px;
+			}
+			p {
+			color: #000000;
+			text-align: center;
+			padding: 10px;
+			border-radius: 4px;
+			margin-bottom: 20px;
+			}
+	   </style>
 		<link href="favicon.png" type="image/x-icon" rel="shortcut icon">
 		<link href="assets/css/master.css" rel="stylesheet">
 		<link href="assets/plugins/iview/css/iview.css" rel="stylesheet">
@@ -183,7 +211,7 @@
 											</div>
 											<div class="footer__item">
 												<span class="footer__name">email:</span>
-												<span class="footer__text">info@autozone.com</span>
+												<span class="footer__text">contact@nextlaneauto.com</span>
 											</div>
 											<div class="footer__item">
 												<span class="footer__name">Hours:</span>
@@ -208,7 +236,7 @@
 					</div><!-- end wrap-section-border -->
 					<div class="footer__wrap-btn"> <a class="footer__btn scroll" href="#this-top">top</a> </div>
 
-					<div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">Next Lane Auto</a> : : All rights reserved</div>
+					<div class="copyright">Copyrights 2024 - 2025 <a class="copyright__link" href="#">NextLane Auto</a> : : All rights reserved</div>
 				</footer>
 
 			</div><!-- end #wrapper -->
