--- a/request_a_free_quote.html
+++ b/request_a_free_quote.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
-      <title>Next Lane Auto</title>
+      <title>NextLane Auto</title>
       <style>
          body {
          font-family: Arial, sans-serif;
@@ -218,7 +218,7 @@
             <input type="text" id="lease_or_finance" name="lease_or_finance" placeholder="Lease or Finance?" required>
             <div class="checkbox-label">
                <input type="checkbox" id="agree" name="agree" required>
-               <label for="agree">I agree to receiving future communications from Familia Motor Group and/or Familia Affiliates, terms of use, & privacy policy. <a href="#" target="_blank">View Privacy Policy</a></label>
+               <label for="agree">I agree to receiving future communications from NextLane Auto and/or NextLane Auto, terms of use, & privacy policy. <a href="#" target="_blank">View Privacy Policy</a></label>
             </div>
             <div class="captcha-container">
                <!-- Include your CAPTCHA widget here -->
