change about-us, home pages

--- a/home.html
+++ b/home.html
@@ -589,26 +589,38 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-xs-12">
-                           <h2 class="ui-title-block">About Us</h2>
-                           <div class="ui-subtitle-block_mod-b">Sed euismod ullamcorper tortor suspendisse potena</div>
+                           <h2 class="ui-title-block">Why Should You Choose Us?</h2>
+                           <div class="ui-subtitle-block_mod-b">  At NextLane, we pride ourselves on a customer-first approach and we strive for customer
+                              satisfaction. At the end of the day, we would not be here without you. It is true, we are not
+                              like a traditional car dealership, but what sets us apart is that:</div>
                         </div>
                         <!-- end col --> 
                      </div>
                      <!-- end row -->
                      <div class="row">
                         <div class="col-md-5">
-                           <h3 class="ui-title-inner"><i class="decor-3 fa fa-caret-right"></i>trusted name in auto-world</h3>
+                         <!--  <h3 class="ui-title-inner"><i class="decor-3 fa fa-caret-right"></i>trusted name in auto-world</h3> -->
                            <div class="decor-1 decor-1_mod-c"></div>
-                           <div class="ui-description">
+                          <!-- <div class="ui-description">
                               <p>Integer tortor bibendum estar faucibus gravida aliquam nulla lectus lacinia egar pulvinar matis nl risus quisque sagitis lorem acda lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                           </div>
+                           </div> 
                            <p>Integer tortor bibendum est faucibus gravida aliquam nul lectus lacinia eget pulvinar mattis inl risus. Quisque sagittis lorem acdua er pharetral interdum quisque convallis nulla id ipsum vamus aliquam arcu arcu.</p>
-                           <p>Etiam imperdiet aliquam eriat volutpat mauris consecteta. Aliquam enisem pretium vitae posuere ac mats vitae arcu.</p>
+                           <p>Etiam imperdiet aliquam eriat volutpat mauris consecteta. Aliquam enisem pretium vitae posuere ac mats vitae arcu.</p> -->
                            <a class="link" href="javascript:void(0);">we have largest vehicles stock</a>
-                           <div class="decor-1"></div>
+                           <div class="decor-1">  <strong>#1 We are understanding.</strong> We know you might be working, have kids, families,
+                              friends, things to do. We want to make this whole process stress-free and
+                              convenient, so we do all the legwork for you. We will find the perfect vehicle that
+                              fits your needs, handle the negotiation process, and deliver it to you at the comfort
+                              of your very home.</div>
                            <a class="link" href="javascript:void(0);">we got worldwide locations</a>
-                           <div class="decor-1"></div>
+                           <div class="decor-1"> <strong>#2 Unlike a standard dealership</strong> where you’re just a number, we strive for a
+                              personalized relationship with you and offer 1-1 support to tailor your specific
+                              needs.</div>
                            <a class="link" href="javascript:void(0);">we deal in all kinds of brands & vehicles</a> 
+                           <div class="decor-1"> <strong>#3 We are car-lovers</strong> and we love caring about you. We want
+                              to make your purchase experience as smooth and enjoyable as possible. We will
+                              ensure that you have a car that meets your needs, handles the negotiation
+                              process, and delivers it to you at the comfort of your very home.
                         </div>
                         <!-- end col --> 
                      </div>
