change home pages section about

--- a/home.html
+++ b/home.html
@@ -606,21 +606,21 @@
                            </div> 
                            <p>Integer tortor bibendum est faucibus gravida aliquam nul lectus lacinia eget pulvinar mattis inl risus. Quisque sagittis lorem acdua er pharetral interdum quisque convallis nulla id ipsum vamus aliquam arcu arcu.</p>
                            <p>Etiam imperdiet aliquam eriat volutpat mauris consecteta. Aliquam enisem pretium vitae posuere ac mats vitae arcu.</p> -->
-                           <a class="link" href="javascript:void(0);">we have largest vehicles stock</a>
-                           <div class="decor-1">  <strong>#1 We are understanding.</strong> We know you might be working, have kids, families,
+                           <a class="link" href="javascript:void(0);"><strong>#1 We are understanding.</strong> We know you might be working, have kids, families,
                               friends, things to do. We want to make this whole process stress-free and
                               convenient, so we do all the legwork for you. We will find the perfect vehicle that
                               fits your needs, handle the negotiation process, and deliver it to you at the comfort
-                              of your very home.</div>
-                           <a class="link" href="javascript:void(0);">we got worldwide locations</a>
-                           <div class="decor-1"> <strong>#2 Unlike a standard dealership</strong> where you’re just a number, we strive for a
+                              of your very home.</a>
+                           <div class="decor-1">  </div>
+                           <a class="link" href="javascript:void(0);"><strong>#2 Unlike a standard dealership</strong> where you’re just a number, we strive for a
                               personalized relationship with you and offer 1-1 support to tailor your specific
-                              needs.</div>
-                           <a class="link" href="javascript:void(0);">we deal in all kinds of brands & vehicles</a> 
-                           <div class="decor-1"> <strong>#3 We are car-lovers</strong> and we love caring about you. We want
+                              needs</a>
+                           <div class="decor-1"></div>
+                           <a class="link" href="javascript:void(0);"><strong>#3 We are car-lovers</strong> and we love caring about you. We want
                               to make your purchase experience as smooth and enjoyable as possible. We will
                               ensure that you have a car that meets your needs, handles the negotiation
-                              process, and delivers it to you at the comfort of your very home.
+                              process, and delivers it to you at the comfort of your very home.</a> 
+                           <div class="decor-1"> 
                         </div>
                         <!-- end col --> 
                      </div>
